--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
+<!doctype html>
 <html>
-	<body>
-		<h1>hello </h1>
-		<p>for better future i have to study now</p>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <title>Untitled Document</title>
+    
+</head>
+<body>
+    <div id="map" style="width:500px;height:400px;"></div>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e0b4bdb56b433d5085050795515fffa1"></script>
+	<script>
+		var container = document.getElementById('map');
+		var options = {
+			center: new daum.maps.LatLng(33.450701, 126.570667),
+			level: 3
+		};
+
+		var map = new daum.maps.Map(container, options);
+	</script>
+</body>
 </html>
