--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Untitled Document</title>
-    
+    <style>
+	    body {
+		    align: auto center;
+	    }
+    </style>
 </head>
 <body>
     <div id="map" style="width:500px;height:400px;"></div>
