--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Untitled Document</title>
     <style>
 	    body {
-		    align: auto center;
-	    }
+            align-content: center;
+        }
     </style>
 </head>
 <body>
     <div id="map" style="width:500px;height:400px;"></div>
+    <div id="lists"></div>
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e0b4bdb56b433d5085050795515fffa1"></script>
 	<script>
 		var container = document.getElementById('map');
@@ -18,8 +19,18 @@
 			center: new daum.maps.LatLng(33.450701, 126.570667),
 			level: 3
 		};
+        	var map = new daum.maps.Map(container, options);
+        
+        	var places = new daum.maps.services.Places();
 
-		var map = new daum.maps.Map(container, options);
+        	var callback = function(result, status) {
+			if (status === daum.maps.services.Status.OK) {
+				console.log(result);
+			}
+        	};
+
+        	places.keywordSearch('농구장', callback);
+	
 	</script>
 </body>
 </html>
